--- a/docker/stable/Dockerfile
+++ b/docker/stable/Dockerfile
@@ -5,8 +5,12 @@ RUN export DEBIAN_FRONTEND=noninteractive
 ENV DEBIAN_FRONTEND noninteractive
 
 # Clone GC2 from GitHub
+# 使用Fork后的Github地址 https://github.com/LeapDeng/geocloud2.git
+#RUN cd /var/www/ &&\
+#	git clone https://github.com/mapcentia/geocloud2.git
+
 RUN cd /var/www/ &&\
-	git clone https://github.com/mapcentia/geocloud2.git
+	git clone https://github.com/LeapDeng/geocloud2.git
 
 # Install npm packages run Grunt
 RUN	cd /var/www/geocloud2 &&\
@@ -14,8 +18,15 @@ RUN	cd /var/www/geocloud2 &&\
 	grunt production
 
 # Install dashboard
+# 使用Fork后的Github地址 https://github.com/LeapDeng/geocloud2.git
+#RUN	mkdir -p /var/www/geocloud2/public/dashboard && mkdir /dashboardtmp && cd /dashboardtmp &&\
+#    git clone https://github.com/mapcentia/dashboard.git && cd /dashboardtmp/dashboard &&\
+#    npm install && cp ./app/config.js.sample ./app/config.js && cp ./.env.production ./.env &&\
+#    npm run build && cp -R ./build/* /var/www/geocloud2/public/dashboard/ &&\
+#    rm -R /dashboardtmp
+
 RUN	mkdir -p /var/www/geocloud2/public/dashboard && mkdir /dashboardtmp && cd /dashboardtmp &&\
-    git clone https://github.com/mapcentia/dashboard.git && cd /dashboardtmp/dashboard &&\
+    git clone https://github.com/LeapDeng/geocloud2.git && cd /dashboardtmp/dashboard &&\
     npm install && cp ./app/config.js.sample ./app/config.js && cp ./.env.production ./.env &&\
     npm run build && cp -R ./build/* /var/www/geocloud2/public/dashboard/ &&\
     rm -R /dashboardtmp
