--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,20 +6,20 @@ networks:
 
 services:
   base:
-    build: ./base
+#    build: ./base
     image: mapcentia/gc2core:base
   ecw:
     build: ./ecw
-    image: mapcentia/gc2core:ecw
+#    image: mapcentia/gc2core:ecw
     depends_on:
       - base
   gdal:
     build: ./gdal
-    image: mapcentia/gc2core:gdal
+#    image: mapcentia/gc2core:gdal
     depends_on:
       - ecw
   mapserver:
-    build: ./mapserver
+#    build: ./mapserver
     image: mapcentia/gc2core:mapserver
     depends_on:
       - gdal
@@ -35,7 +35,7 @@ services:
       - default
       - internal
     ports:
-      - "8080:80"
+      - "8888:80"
     environment:
       - POSTGIS_HOST=postgis
       - POSTGIS_DB=postgres
